Fix overflow of comments on users#show. Add validations for profile. Style edit profile form.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,6 +64,7 @@ body {
   gap: 1rem;
   padding: 2rem;
   margin: 1rem;
+  min-width: 320px;
   max-width: 620px;
 }
 
